--- a/CourtApp.Web/Areas/Litigation/Views/CaseWork/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseWork/_ViewAll.cshtml
@@ -1,42 +1,74 @@
-﻿@model IEnumerable<CaseWorkingViewModel>
-<table id="tblCaseWork" class="table table-striped" width="100%" cellspacing="0">
-    <thead>
-        <tr>
-            <th width="10%">Sno.</th>
-            <th width="90%">Case Description</th>
-        </tr>
-    </thead>
-    <tbody>
-        @{
-            int count = 0;
-        }
-        @foreach (var bt in Model)
-        {
-            <tr>
-                <td>
-                    @(count = count + 1)
-                </td>
-                <td>
-                    <b>@bt.CaseDetail.ToUpper()</b>
-                    <input type="hidden" value="@bt.CaseId" />
-                    <table>
-                        @foreach (var w in bt.AWorks)
-                        {
-                            <tr style="width:100%">
-                                <td style="width:90%">
-                                    @w.WorkDetail
-                                </td>
-                                <td style="width:10%"><input type="checkbox" value="@w.Id" /></td>
-                            </tr>
-                        }
-                    </table>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+﻿@model PendingWorkDataViewModel
+<div class="card">
+    <div id="viewAll" class="card-body table-responsive">
+        <form asp-controller="CaseWork" method="post" asp-action="Update" class="d-inline">
+            <table class="table table-striped" id="tblPendingWork">
+                <thead>
+                    <tr>
+                        <th>
+                            @localizer["Sno"]
+                        </th>
+                        <th>
+                            @localizer["Case Description"]
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+
+                    @for (int i = 0; i < Model.PendingWork.Count(); i++)
+                    {
+                        <tr>
+                            <td>
+                                @(i + 1)
+                            </td>
+                            <td>
+                                <input asp-for="@Model.PendingWork[i].Id" type="hidden" />
+                                <input asp-for="@Model.PendingWork[i].CaseTitle" type="hidden" />
+                                @Model.PendingWork[i].CaseTitle
+                                <table>
+                                    @for (int j = 0; j < Model.PendingWork[i].Works.Count(); j++)
+                                    {
+                                        <tr>
+                                            <td>
+                                                <input asp-for="@Model.PendingWork[i].Works[j].Id" type="hidden" />
+                                                <input asp-for="@Model.PendingWork[i].Works[j].Work" type="hidden" />
+                                                @Model.PendingWork[i].Works[j].Work
+                                            </td>
+                                            <td>
+                                                <div class="form-check m-1">
+                                                    <input asp-for="@Model.PendingWork[i].Works[j].Selected" class="form-check-input" />
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    }
+                                </table>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+            @if (Model.PendingWork.Count() > 0)
+            {
+                <div class="col-sm-12" style="padding: 20px 20px 0px 0px">
+                    <button type="submit" id="save" class="btn bg-success">
+                        <i class="fa fa-check"></i>
+                        Save
+                    </button>
+                </div>
+            }
+        </form>
+    </div>
+</div>
 <script>
     $(document).ready(function () {
-        $("#tblCaseWork").DataTable();
+        $("#tblPendingWork").DataTable(
+            {
+                "language": {
+                    "emptyTable": "There are no pending works!"
+                }
+            }
+        );
     });
 </script>
+
+
