--- a/CourtApp.Web/Areas/Litigation/Views/Hearing/_AssignWork.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/Hearing/_AssignWork.cshtml
@@ -1,13 +1,12 @@
 ﻿@model CaseWorkingViewModel
-<form id="create-form" method="post" method="post" asp-controller="CaseWork" asp-action="OnPostCreateOrEdit" asp-route-Id="@Model.CaseId" enctype="multipart/form-data">
+<form id="create-form" method="post" asp-controller="hearing" asp-action="OnPostAssignWork" asp-route-Id="@Model.CaseId" enctype="multipart/form-data">
     <div class="row">
         <div class="col-md-12">
             <div class="form-group row">
                 <label class="col-md-3 col-form-label">@localizer["Work Type"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
-                        <select class="form-control select2bs4" asp-for="WorkTypeId" asp-items="@Model.WorkTypes">
-                            <option></option>
+                        <select class="form-control select2bs4" asp-for="WorkTypeId" asp-items="@Model.WorkTypes">                            
                         </select>
                     </div>
                     <span asp-validation-for="WorkId" class="text-danger"></span>
@@ -44,14 +43,15 @@
             </div>
 
             <div class="form-group row">
-                <div class="col-md-3">
+                <div class="col-md-12">                   
                 </div>
             </div>
         </div>
     </div>
 
     <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
-        <button type="submit" class="btn btn-success">Save</button>
+       @*  <button type="submit" class="btn btn-success">Save</button> *@
+        <button id="btnSubmit" type="button" class="btn btn-success">Save</button>
         <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
     </div>
 </form>
@@ -78,5 +78,34 @@
                 $("#WorkId").append(`<option /><option value="${item.Id}">${item.Name_En}</option>`);
             });
         });
-    });   
+    });
+    $("#btnSubmit").on("click", function () {
+        Upseart();
+    });
+    Upseart = function () {      
+        var CaseIds = [];
+        $('#tblTHearingCaseDetail tbody tr').each(function () {
+            if ($(this).find("input[type='checkbox'").is(":checked")) {
+                CaseIds.push($(this).find('input[type="hidden"]').val());
+            }
+        });
+        var selectedWorks = $("#WorkId").val();
+        var url = $("#create-form").attr("action");
+        var formData = new FormData();
+        formData.append("SelectedCases", CaseIds);
+        formData.append("WorkTypeId", $("#WorkTypeId").val());
+        formData.append("WorkId", selectedWorks);
+        formData.append("WorkingDate", $("#WorkingDate").val());
+        formData.append("Remark", $("#Remark").val());
+        
+        $.ajax({
+            type: 'POST',
+            url: url,
+            data: formData,
+            processData: false,
+            contentType: false
+        }).done(function (response) {
+
+        });
+    }
 </script>
