--- a/CourtApp.Web/Areas/Client/Views/ManageClient/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/Client/Views/ManageClient/_CreateOrEdit.cshtml
@@ -6,10 +6,12 @@
 
 <hr />
 @model ClientViewModel
+<partial name="_StatusMessage" model="Model.StatusMessage" />
 <form id="create-form" method="post" asp-controller="ManageClient" asp-action="OnPostCreateOrEdit"
       asp-route-id="@Model.Id" onsubmit="return jQueryModalPost(this);" enctype="multipart/form-data">
 
     <div class="row">
+       
         <div class="col-md-12">
             <div class="form-group row">
                 <label class="col-md-2 col-form-label">First Name (<span style="color:red">*</span>)</label>
@@ -125,11 +127,34 @@
     <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
 
         <button type="submit" class="btn btn-success">Save</button>
-        <button type="button" class="btn btn-default close-button" id="btnCancel">Cancel</button>
+        <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
     </div>
 </form>
 <script type="text/javascript" language=javascript>
     $.validator.unobtrusive.parse(document);
+    $("#StateCode").select2({
+        placeholder: "Select a state",
+        theme: "bootstrap4",
+        escapeMarkup: function (m) {
+            return m;
+        }
+    });
+    $("#DistrictCode").select2({
+        placeholder: "Select a district",
+        theme: "bootstrap4",
+        escapeMarkup: function (m) {
+            return m;
+        }
+    });
+
+    $("#StateCode").on("change", function () {
+        $("#DistrictCode").empty();
+        $.getJSON("/Client/ManageClient/LoadDistricts?StateCode=" + $("#StateCode").val(), function (data) {
+            $.each(data.Data, function (i, item) {
+                $("#DistrictCode").append(`<option /><option value="${item.Code}">${item.Name_En}</option>`);
+            });
+        });
+    });
 </script>
 @section Scripts
 {
