--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateOrEdit.cshtml
@@ -11,7 +11,9 @@
 @model CaseViewModel
 <div class="card">
     <div class="col-sm-12" style="padding:20px">
+        <partial name="_StatusMessage" model="Model.StatusMessage" />
         <form id="create-form" method="post" asp-controller="CaseManage" asp-action="OnPostCreateOrEdit" asp-route-Id="@Model.Id" enctype="multipart/form-data">
+            <input type="hidden" value="@Model.Id" />
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group row">
@@ -203,7 +205,7 @@
                                     <option></option>
                                 </select>
                             </div>
-                            @* <span asp-validation-for="CaseStageCode" class="text-danger"></span> *@
+                            
                         </div>
                     </div>
 
@@ -222,7 +224,10 @@
             </div>
             <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
                 <button type="submit" class="btn btn-success">Save</button>
-                <button type="reset" class="btn btn-outline-warning">Reset</button>
+                <a onclick="jQueryModalGet('/client/manageclient/OnGetCreateOrEdit?CaseId=@Model.Id','Add Client')" class="btn btn-outline-success">
+                    <i class="fa fa-plus-square"></i> Add Client
+                </a>
+                
             </div>
         </form>
     </div>
