--- a/CourtApp.Web/Areas/Litigation/Views/Hearing/_AssignWork.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/Hearing/_AssignWork.cshtml
@@ -6,7 +6,8 @@
                 <label class="col-md-3 col-form-label">@localizer["Work Type"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
-                        <select class="form-control select2bs4" asp-for="WorkTypeId" asp-items="@Model.WorkTypes">                            
+                        <select class="form-control select2bs4" asp-for="WorkTypeId" asp-items="@Model.WorkTypes">
+                            <option></option>
                         </select>
                     </div>
                     <span asp-validation-for="WorkId" class="text-danger"></span>
@@ -17,7 +18,7 @@
                 <label class="col-md-3 col-form-label">@localizer["Work"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
-                        <select class="form-control select2bs4" asp-for="WorkId" asp-items="@Model.Works" >
+                        <select class="form-control select2bs4" asp-for="WorkId"  >
                             <option></option>
                         </select>
                     </div>
@@ -49,13 +50,12 @@
         </div>
     </div>
 
-    <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
-       @*  <button type="submit" class="btn btn-success">Save</button> *@
+    <div class="form-group justify-content-between" style="margin-bottom: 0px !important">      
         <button id="btnSubmit" type="button" class="btn btn-success">Save</button>
         <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
     </div>
 </form>
-<script type="text/javascript" language=javascript>
+<script type="text/javascript" language="javascript">
     
     $("#WorkTypeId").select2({
         placeholder: "Select a work type",
@@ -71,12 +71,14 @@
             return m;
         }
     });
+   
     $("#WorkTypeId").on("change", function () {
         $("#WorkId").empty();
-        $.getJSON("/Litigation/CaseWork/DdlSubWorks?WorkId=" + $("#WorkId").val(), function (data) {
+        $.getJSON("/Litigation/CaseWork/DdlSubWorks?WorkId=" + $("#WorkTypeId").val(), function (data) {
             $.each(data.Data, function (i, item) {
-                $("#WorkId").append(`<option /><option value="${item.Id}">${item.Name_En}</option>`);
+                $("#WorkId").append(`<option value="${item.Id}">${item.Name_En}</option>`);
             });
+            //$('#WorkId').multiselect();
         });
     });
     $("#btnSubmit").on("click", function () {
