--- a/CourtApp.Web/Views/Shared/_Scripts.cshtml
+++ b/CourtApp.Web/Views/Shared/_Scripts.cshtml
@@ -11,4 +11,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js" integrity="sha512-EanukVTZc4W9tUCLnDl069Izidg49PcNRKO1upLzKt9ajq66i+bXOtlzXcIbRhb6vVEGF6BCc8wQi5T1ztCpTQ==" crossorigin="anonymous"></script>
 <script src="~/lib/select2/js/select2.js"></script>
 <script src="~/lib/bootstrap/js/bootstrap-datepicker.min.js"></script>
-
+<script src="~/lib/bootstrap/dist/js/bootstrap-multiselect.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap-multiselect.min.js"></script>
