--- a/CourtApp.Web/Views/Shared/_Styles.cshtml
+++ b/CourtApp.Web/Views/Shared/_Styles.cshtml
@@ -17,4 +17,6 @@
 <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
 <link href="~/lib/bootstrap/dist/css/bootstrap-datepicker.min.css" rel="stylesheet" />
 <!-- select2-bootstrap4-theme -->
-<link href="https://raw.githack.com/ttskch/select2-bootstrap4-theme/master/dist/select2-bootstrap4.css" rel="stylesheet">
+<link href="https://raw.githack.com/ttskch/select2-bootstrap4-theme/master/dist/select2-bootstrap4.css" rel="stylesheet"/>
+<link href="~/lib/bootstrap/dist/css/bootstrap-multiselect.css" rel="stylesheet" />
+<link href="~/lib/bootstrap/dist/css/bootstrap-multiselect.min.css" rel="stylesheet" />
