--- a/CourtApp.Web/Areas/Litigation/Views/Hearing/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/Hearing/_ViewAll.cshtml
@@ -28,9 +28,12 @@
                                         @Model.CaseList[i].CaseTitle
                                     </td>
                                     <td>
-                                        <div class="form-check m-1">
-                                            <input asp-for="@Model.CaseList[i].Selected" class="form-check-input" />
-                                        </div>
+                                        <a onclick="jQueryModalGet('/Litigation/casemanage/OnGetCaseHistory?CaseId=@Model.CaseList[i].Id', 'See History')" class="btn bg-success "> <i class="fa fa-history"></i>History</a>
+                                        <a onclick="jQueryModalGet('/Litigation/casemanage/OnGetCaseProceeding?CaseId=@Model.CaseList[i].Id', 'Case Proceeding')" class="btn bg-success"> <i class="fa fa-plus-square"></i> Proceeding</a> 
+                                        <a onclick="jQueryModalGet('/Litigation/hearing/AssignWorkCase?CaseId=@Model.CaseList[i].Id', 'Case Working')" class="btn bg-success"> <i class="fa fa-plus-square"></i> Work</a>
+                                        @* <div class="form-check m-1">
+                                    <input asp-for="@Model.CaseList[i].Selected" class="form-check-input" />
+                                    </div> *@
                                     </td>
                                 </tr>
                             }
