--- a/CourtApp.Web/Areas/Litigation/Views/Hearing/_AssignWork.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/Hearing/_AssignWork.cshtml
@@ -1,5 +1,5 @@
 ﻿@model CaseWorkingViewModel
-<form id="create-form" method="post" asp-controller="hearing" asp-action="OnPostAssignWork" asp-route-Id="@Model.CaseId" enctype="multipart/form-data">
+<form id="create-form" method="post" asp-controller="hearing" asp-action="OnPostAssignWork"  enctype="multipart/form-data">
     <div class="row">
         <div class="col-md-12">
             <input type="hidden" asp-for="CaseId" />
